force-app/main/default/objects/Participation_Data__c/Participation_Data__c.object-meta.xml
<CustomObject>
    <label>Participation Data</label>
    <nameField>
        <displayFormat>PD-{00000}</displayFormat>
        <label>Participation Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participation Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>