force-app/main/default/objects/Participation_Data__c/fields/Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Deliverable__c</fullName>
    <label>Deliverable</label>
    <length>100</length>
    <type>Text</type>
</CustomField>