force-app/main/default/objects/Participation_Data__c/fields/Female_Participants__c.field-meta.xml
<CustomField>
    <fullName>Female_Participants__c</fullName>
    <inlineHelpText>Where Available</inlineHelpText>
    <label>Female Participants</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>