force-app/main/default/objects/Participation_Data__c/fields/Gender_Diverse__c.field-meta.xml
<CustomField>
    <fullName>Gender_Diverse__c</fullName>
    <inlineHelpText>Where Available</inlineHelpText>
    <label>Gender Diverse Participants</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>