force-app/main/default/objects/Participation_Data__c/fields/Gender_not_specified__c.field-meta.xml
<CustomField>
    <fullName>Gender_not_specified__c</fullName>
    <description>Gender not specified</description>
    <label>Gender not specified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>