force-app/main/default/objects/Participation_Data__c/fields/How_did_you_calculate_participant_number__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_calculate_participant_number__c</fullName>
    <label>How did you calculate participant number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actual numbers from a database</fullName>
            </value>
            <value>
                <fullName>Actual numbers from a list</fullName>
            </value>
            <value>
                <fullName>Calculated by number of teams</fullName>
            </value>
            <value>
                <fullName>Estimated Numbers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>