force-app/main/default/objects/Participation_Data__c/fields/Male_Participants__c.field-meta.xml
<CustomField>
    <fullName>Male_Participants__c</fullName>
    <inlineHelpText>Where Available</inlineHelpText>
    <label>Male Participants</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>