force-app/main/default/objects/Participation_Data__c/fields/Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Multiplier__c</fullName>
    <label>Multiplier</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>