force-app/main/default/objects/Participation_Data__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <description>Other gender</description>
    <label>Other</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>