force-app/main/default/objects/Participation_Data__c/fields/Programme_Name__c.field-meta.xml
<CustomField>
    <fullName>Programme_Name__c</fullName>
    <label>Programme Name</label>
    <referenceTo>Participation_Activity_Profile_Data__c</referenceTo>
    <relationshipLabel>Participation Data</relationshipLabel>
    <relationshipName>Participation_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>