force-app/main/default/objects/Participation_Data__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <formula>Programme_Name__r.Start_Date__c</formula>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>