force-app/main/default/objects/Participation_Data__c/fields/Total_Teams__c.field-meta.xml
<CustomField>
    <fullName>Total_Teams__c</fullName>
    <label>Total Teams</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>